fix displaying enemies card with wizard and displaying card with initiative

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -348,7 +348,7 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyW
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 WBP_Line_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-WidgetBlueprint=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+WidgetBlueprint=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_SlayCard_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 WBP_SlashCard_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 PrimaryDataAsset_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.CardParam
@@ -421,6 +421,8 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -428,7 +430,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -436,7 +437,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -458,6 +458,8 @@ OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
+OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal.WBP_Heal
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -470,26 +472,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem1=/Game/Blueprints/BP_PlayerController
-MRUItem2=/Game/Blueprints/Widget/WBP_Board
-MRUItem3=/Game/Blueprints/Widget/WBP_Card
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem6=/Game/Blueprints/Widget/WBP_Frame
-MRUItem7=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem8=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem9=/Game/Materials/M_TestNiagara_UI
-MRUItem10=/Game/Materials/M_TestNiagara
-MRUItem11=/Game/Niagara/NS_Simple
-MRUItem12=/Game/Materials/MF_PrintLayer
-MRUItem13=/Game/Materials/MF_RGBtoCMYK
-MRUItem14=/Game/Materials/M_TestComic
-MRUItem15=/Game/Materials/MF_CMYKtoRGB
-MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem18=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem19=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem1=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem3=/Game/Blueprints/BP_PlayerController
+MRUItem4=/Game/Blueprints/Widget/WBP_Board
+MRUItem5=/Game/Blueprints/Widget/WBP_Card
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem8=/Game/Blueprints/Widget/WBP_Frame
+MRUItem9=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem10=/Game/Materials/M_TestNiagara_UI
+MRUItem11=/Game/Materials/M_TestNiagara
+MRUItem12=/Game/Niagara/NS_Simple
+MRUItem13=/Game/Materials/MF_PrintLayer
+MRUItem14=/Game/Materials/MF_RGBtoCMYK
+MRUItem15=/Game/Materials/M_TestComic
+MRUItem16=/Game/Materials/MF_CMYKtoRGB
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem18=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem19=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
 MRUItem20=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
 MRUItem21=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
 MRUItem22=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
@@ -1815,7 +1817,7 @@ UserWidget="\"Object\" "
 WBP_Card_C="\"Object\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Overlay="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
 ConsoleSettings="\"Object.AutoComplete.AutoCompleteMapPaths\" "
@@ -1824,8 +1826,8 @@ DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Obj
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 DataflowSettings="\"Object.NodeColors.NodeColorsMap\" "
 ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Objects\" "
-TextBlock="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Board_C="\"Object\" "
 WBP_SpellCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1854,11 +1856,11 @@ NewWidgetBlueprint_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTra
 WBP_SlayCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlashCard_C="\"Object\" "
 WBP_Protection_C="\"Object.PointToCheck\" "
-WBP_ThunderBolt_C="\"Object.PointToCheck\" "
+WBP_ThunderBolt_C="\"Object\" "
 NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Equipment_C=
 WBP_FireBall_C=
-WBP_Heal_C="\"Object.PointToCheck\" "
+WBP_Heal_C="\"Object\" "
 WBP_Ambush_C=
 WBP_SneackAttack_C="\"Object\" "
 WBP_Hide_C=
@@ -1880,6 +1882,11 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
+WidgetBlueprint="\"Object\" "
+BaseWidgetBlueprint="\"Object\" "
+UserWidgetBlueprint="\"Object\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
