almost fix frame statut swapping while targetting card and hovering cards in initiative

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3221,7 +3221,7 @@ RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
