fix overhealing + fix fireball targeting

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,7 +323,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -370,8 +370,8 @@ K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.
 WBP_SneackAttack_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Hide_C=
-ApplyEffect=
-ApplyEffect_3=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+ApplyEffect=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+ApplyEffect_3=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 HoveringCard=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 HoveringCard_6=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 EnnemyAttack=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
@@ -419,7 +419,7 @@ CheckHealthAndUpdateArray_19=PropertyWrapper.DefaultValueCategory.TextureArray,P
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -460,6 +460,7 @@ OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal.WBP_Heal
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -472,28 +473,28 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem1=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem3=/Game/Blueprints/BP_PlayerController
-MRUItem4=/Game/Blueprints/Widget/WBP_Board
-MRUItem5=/Game/Blueprints/Widget/WBP_Card
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem8=/Game/Blueprints/Widget/WBP_Frame
-MRUItem9=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem10=/Game/Materials/M_TestNiagara_UI
-MRUItem11=/Game/Materials/M_TestNiagara
-MRUItem12=/Game/Niagara/NS_Simple
-MRUItem13=/Game/Materials/MF_PrintLayer
-MRUItem14=/Game/Materials/MF_RGBtoCMYK
-MRUItem15=/Game/Materials/M_TestComic
-MRUItem16=/Game/Materials/MF_CMYKtoRGB
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem18=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem19=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem20=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem21=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem2=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem4=/Game/Blueprints/BP_PlayerController
+MRUItem5=/Game/Blueprints/Widget/WBP_Board
+MRUItem6=/Game/Blueprints/Widget/WBP_Card
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem9=/Game/Blueprints/Widget/WBP_Frame
+MRUItem10=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem11=/Game/Materials/M_TestNiagara_UI
+MRUItem12=/Game/Materials/M_TestNiagara
+MRUItem13=/Game/Niagara/NS_Simple
+MRUItem14=/Game/Materials/MF_PrintLayer
+MRUItem15=/Game/Materials/MF_RGBtoCMYK
+MRUItem16=/Game/Materials/M_TestComic
+MRUItem17=/Game/Materials/MF_CMYKtoRGB
+MRUItem18=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem19=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem20=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem21=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
 MRUItem22=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
 MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
 MRUItem24=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
@@ -1859,7 +1860,7 @@ WBP_Protection_C="\"Object.PointToCheck\" "
 WBP_ThunderBolt_C="\"Object\" "
 NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Equipment_C=
-WBP_FireBall_C=
+WBP_FireBall_C="\"Object\" "
 WBP_Heal_C="\"Object\" "
 WBP_Ambush_C=
 WBP_SneackAttack_C="\"Object\" "
