--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -365,7 +365,7 @@ WBP_FireBall_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper
 EnergyCheck=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 EnergyCheck_15=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_ThunderBolt_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-WBP_Heal_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+WBP_Heal_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_SneackAttack_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -427,6 +427,17 @@ DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -434,34 +445,21 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Frame.WBP_Frame
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush.WBP_Ambush
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -474,36 +472,36 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Widget/WBP_Frame
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem2=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem4=/Game/Blueprints/BP_PlayerController
-MRUItem5=/Game/Blueprints/Widget/WBP_Board
-MRUItem6=/Game/Blueprints/Widget/WBP_Card
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem9=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem10=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem11=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem12=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem13=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem14=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem15=/Game/Materials/M_TestNiagara_UI
-MRUItem16=/Game/Materials/M_TestNiagara
-MRUItem17=/Game/Niagara/NS_Simple
-MRUItem18=/Game/Materials/MF_PrintLayer
-MRUItem19=/Game/Materials/MF_RGBtoCMYK
-MRUItem20=/Game/Materials/M_TestComic
-MRUItem21=/Game/Materials/MF_CMYKtoRGB
-MRUItem22=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem24=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem25=/Game/Blueprints/utility/BPF_Utility
-MRUItem26=/Game/Blueprints/Widget/WBP_Board2
-MRUItem27=/Game/Blueprints/BPFL_Card
-MRUItem28=/Game/Blueprints/E_FrameStatut
-MRUItem29=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem9=/Game/Textures/EnemyCard
+MRUItem10=/Game/Blueprints/Widget/WBP_Frame
+MRUItem11=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem12=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem14=/Game/Blueprints/BP_PlayerController
+MRUItem15=/Game/Blueprints/Widget/WBP_Board
+MRUItem16=/Game/Blueprints/Widget/WBP_Card
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem18=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem19=/Game/Materials/M_TestNiagara_UI
+MRUItem20=/Game/Materials/M_TestNiagara
+MRUItem21=/Game/Niagara/NS_Simple
+MRUItem22=/Game/Materials/MF_PrintLayer
+MRUItem23=/Game/Materials/MF_RGBtoCMYK
+MRUItem24=/Game/Materials/M_TestComic
+MRUItem25=/Game/Materials/MF_CMYKtoRGB
+MRUItem26=/Game/Blueprints/utility/BPF_Utility
+MRUItem27=/Game/Blueprints/Widget/WBP_Board2
+MRUItem28=/Game/Blueprints/BPFL_Card
+MRUItem29=/Game/Blueprints/E_FrameStatut
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -598,7 +596,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Textures/Wizard
+ContentBrowserTab1.SelectedPaths=/Game/Textures/CharactersV2
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -606,6 +604,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.JumpMRU=/All/Game/Textures/CharactersV2
 ContentBrowserTab1.JumpMRU=/All/Game/Textures/Wizard
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserTab1.JumpMRU=/All/EngineData/Engine/EditorBlueprintResources
@@ -622,23 +621,24 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Rogue
+ContentBrowserDrawer.SelectedPaths=/Game/Textures/CharactersV2
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures/CharactersV2
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures/DirectionArrow
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget/CommonUI
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/utility
@@ -1800,6 +1800,7 @@ MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
 MaterialExpressionLinearInterpolate.MaterialExpression=True
 WBP_Card_C.Enemy=True
 WBP_Card_C.Path=True
+Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1860,7 +1861,7 @@ WBP_SlashCard_C="\"Object\" "
 WBP_Protection_C="\"Object\" "
 WBP_ThunderBolt_C="\"Object\" "
 NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Equipment_C=
+WBP_Equipment_C="\"Object\" "
 WBP_FireBall_C="\"Object\" "
 WBP_Heal_C="\"Object\" "
 WBP_Ambush_C="\"Object\" "
@@ -1869,8 +1870,8 @@ WBP_Hide_C="\"Object\" "
 WBP_Frame_C="\"Object\" "
 WBP_test_C=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_SpearCard_C="\"Object.PointToCheck\" "
-WBP_DimensionalDoor_C="\"Object.PointToCheck\" "
+WBP_SpearCard_C="\"Object\" "
+WBP_DimensionalDoor_C="\"Object\" "
 WBP_GrippingTapes_C="\"Object\" "
 SetTarget="\"Struct\" \"Struct.IndexToTarget\" "
 SetTarget_4="\"Struct\" "
@@ -1891,6 +1892,10 @@ Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -1961,6 +1966,7 @@ K2Node_Switch="\"Object\" "
 /Game/Materials/MF_CMYKtoRGB.MF_CMYKtoRGB=0
 /Game/Materials/MF_RGBtoCMYK.MF_RGBtoCMYK=0
 /Game/Materials/MF_PrintLayer.MF_PrintLayer=0
+/Game/Textures/EnemyCard.EnemyCard=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3225,7 +3231,7 @@ RecentsFiles=F:/programme/UE/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
