resize grid : +1 row; +1 line  + Cut characters cards in half

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -621,15 +621,15 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Textures/CharactersV2
+ContentBrowserDrawer.SelectedPaths=/Game/Textures
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures/CharactersV2
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures/CharactersV2
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
@@ -1808,18 +1808,18 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
-Object="\"Object\" "
-CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Card_C="\"Object\" "
-SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
@@ -1845,7 +1845,7 @@ DebugCameraControllerSettings="\"Object.General.CycleViewModes\" "
 CommonHierarchicalScrollBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Render Transform.RenderTransform\" "
 WBP_CommonWidget_C="\"Object.Render Transform.RenderTransform\" "
-CommonUserWidget="\"Object\" "
+CommonUserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_CommonActivableWidget_C="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 SafeZone="\"Object.Render Transform.RenderTransform\" "
@@ -1867,7 +1867,7 @@ WBP_Heal_C="\"Object\" "
 WBP_Ambush_C="\"Object\" "
 WBP_SneackAttack_C="\"Object\" "
 WBP_Hide_C="\"Object\" "
-WBP_Frame_C="\"Object\" "
+WBP_Frame_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_test_C=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SpearCard_C="\"Object\" "
