--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -621,21 +621,21 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures/CharactersV2
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures/CharactersV2
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures/DirectionArrow
@@ -1850,7 +1850,7 @@ WBP_CommonActivableWidget_C="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 SafeZone="\"Object.Render Transform.RenderTransform\" "
 WBP_SpellCardTuto_C="\"Object\" "
-WBP_CardHand_C=
+WBP_CardHand_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_CardHUD_C=
 BP_PlayerController_C=
 PlayerController=
@@ -1867,7 +1867,7 @@ WBP_Heal_C="\"Object\" "
 WBP_Ambush_C="\"Object\" "
 WBP_SneackAttack_C="\"Object\" "
 WBP_Hide_C="\"Object\" "
-WBP_Frame_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_Frame_C="\"Object\" "
 WBP_test_C=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SpearCard_C="\"Object\" "
